--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ favicon: "/img/favicon.ico"
 ################
 
 black-favicon: "/img/black-lab-glass.ico"
+cobalt: "/img/cobalt.gif"
 
 # background-img: "../img/bg.jpg"
 
