--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
+        with:
+          lfs: true
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
